Fix footer text overflow on mobile landscape.

--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -884,7 +884,7 @@ i {
   }
 }
 @media (min-width: 25em) and (max-height: 42.9em) {
-  .c-footer__text-content {
+  .c-footer {
     padding-left: 5rem;
   }
 }
