--- a/assets/styles/sass/components/_footer.scss
+++ b/assets/styles/sass/components/_footer.scss
@@ -8,10 +8,8 @@
         max-width: 112.5rem;
     }
 
-    &__text-content {
-        @include responsive(small-land) {
-            padding-left: 5rem;
-        }
+    @include responsive(small-land) {
+        padding-left: 5rem;
     }
 
     &__list-item {
